# catalog-chatbot

./: .gitignore  README.md
backend/: README.md  app.py  main.py  pyproject.toml
backend/services/: chatBot.py  llm.py  quer_generation.py  run_query.py  tools.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx  styles.css
frontend/src/api/: chatApi.js
frontend/src/app/: store.js
frontend/src/components/: ChatHeader.jsx  ChatInput.jsx  ChatMessages.jsx  MessageBubble.jsx  ProductTips.jsx
frontend/src/features/chat/: chatSlice.js
