[project]
name = "lang-graph-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.139.2",
    "langchain>=1.3.14",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.9",
    "notebook>=7.6.0",
    "oracledb>=4.0.2",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.51.0",
]
